tests/errors/matrix_matmul_03.f90
program matrix_matmul_03
    implicit none
    logical :: a(3, 3)
    integer :: b(3, 3)
    print *, matmul(a, b)
end program
